CHANGES IN VERSION 1.1.2
------------------------
 o Major rewrite of the data preparation, now relying on simple dcf
   files as input and intermediate PAHD objects. <2015-12-17 Thu>
 
CHANGES IN VERSION 1.1.1
------------------------
 o Manually setting flInfo in .ftpfileinfo2 for files located on S3
   <2015-12-15 Tue>

CHANGES IN VERSION 1.1.0
------------------------
 o Bioc devel 3.3

CHANGES IN VERSION 1.0.0
------------------------
 o Bioc release 3.2
 
CHANGES IN VERSION 0.99.3
-------------------------
 o removing .get1 methods and pointing to relevant AnnotationHub file
   <2015-10-09 Fri>
 
CHANGES IN VERSION 0.99.2
-------------------------
 o Use AnnotationHub::query() instead of manual subsetting
   <2015-09-02 Wed>

CHANGES IN VERSION 0.99.1
-------------------------
 o Submission of Bioc (Issue 1292) <2015-08-25 Tue>
 
CHANGES IN VERSION 0.99.0
-------------------------
 o  First release with data PXD000001